Corrigi swagger atualizar-produto
